add: enabled rest endpoint security based on user role

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,19 @@ spring.jpa.properties.hibernate.hibernate.dialect=org.hibernate.dialect.H2Dialec
 spring.jpa.properties.hibernate.hbm2ddl.auto= create-drop
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
 spring.jpa.properties.javax.persistence.validation.mode=auto
+
+#####################
+#Logger configuration
+#####################
+logging.level.org.springframework.web=DEBUG
+logging.level.lt.aejavap.security.controller.users=DEBUG
+logging.level.lt.aejavap.security=DEBUG
+logging.level.org.hibernate=ERROR
+#appender.console.type = Console
+#appender.console.name = STDOUT
+#appender.console.layout.type = PatternLayout
+#appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+logging.pattern.console=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+logging.file.max-size=25MB
+logging.pattern.file=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+logging.file=logs/auth-app.log
