--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 //    compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 //    compile('org.springframework.cloud:spring-cloud-starter-security')
 //    compile('org.springframework.kafka:spring-kafka')
+    compile 'io.springfox:springfox-swagger2:2.9.2'
+    compile 'io.springfox:springfox-swagger-ui:2.9.2'
+
+
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
